Start working with sass
Init everything for sass usage.
If you want to use the "runSASS.bat" file, make sure you have Sass
installed.

--- a/css/import.css
+++ b/css/import.css
@@ -1,7 +1,7 @@
-@import "loader.css";
-@import "menu.css";
-@import "menuBtn.css";
-@import "style.css";
-@import "banner.css";
-@import "mainContent.css";
-@import "screenshots.css";
+@import url(loader.css);
+@import url(menu.css);
+@import url(menuBtn.css);
+@import url(style.css);
+@import url(banner.css);
+@import url(mainContent.css);
+@import url(screenshots.css);
