--- a/css/banner.css
+++ b/css/banner.css
@@ -1,18 +1,13 @@
-.banner{
+.banner {
   width: 100%;
   background-color: #9ECAD9;
 }
 
-.banner span{
+.banner span {
   display: block;
   font-size: 20vw;
   text-align: center;
   background-color: #9ECAD9;
   color: white;
-  text-shadow:
-    0 0 2rem #376D7F,
-    1px 1px 3px #376D7F,
-    1px -1px 3px #376D7F,
-    -1px 1px 3px #376D7F,
-    -1px -1px 3px #376D7F;
+  text-shadow: 0 0 2rem #376D7F, 1px 1px 3px #376D7F, 1px -1px 3px #376D7F, -1px 1px 3px #376D7F, -1px -1px 3px #376D7F;
 }
