--- a/css/menuBtn.css
+++ b/css/menuBtn.css
@@ -8,7 +8,6 @@
   margin-top: 0.2rem;
   margin-left: 1rem;
 }
-
 .menuBtn .bar {
   width: 20px;
   height: 2px;
@@ -21,12 +20,11 @@
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
-
 .menuBtn .bar:nth-child(1) {
   margin-top: 0;
 }
@@ -40,11 +38,9 @@
   -o-transform: rotate(135deg);
   transform: rotate(135deg);
 }
-
 .menuBtn.open .bar:nth-child(2) {
   opacity: 0;
 }
-
 .menuBtn.open .bar:nth-child(3) {
   margin-top: 0;
   position: absolute;
