--- a/css/sass/banner.scss
+++ b/css/sass/banner.scss
@@ -1,18 +1,20 @@
+@import "colors";
+
 .banner{
   width: 100%;
-  background-color: #9ECAD9;
-}
+  background-color: $bannerCol;
 
-.banner span{
-  display: block;
-  font-size: 20vw;
-  text-align: center;
-  background-color: #9ECAD9;
-  color: white;
-  text-shadow:
-    0 0 2rem #376D7F,
-    1px 1px 3px #376D7F,
-    1px -1px 3px #376D7F,
-    -1px 1px 3px #376D7F,
-    -1px -1px 3px #376D7F;
+  span{
+    display: block;
+    font-size: 20vw;
+    text-align: center;
+    background-color: $bannerCol;
+    color: $bannerTxtCol;
+    text-shadow:
+      0 0 2rem $bannerTxtShadow,
+      1px 1px 3px $bannerTxtShadow,
+      1px -1px 3px $bannerTxtShadow,
+      -1px 1px 3px $bannerTxtShadow,
+      -1px -1px 3px $bannerTxtShadow;
+  }
 }
