--- a/css/sass/menuBtn.scss
+++ b/css/sass/menuBtn.scss
@@ -1,56 +1,68 @@
+@import "colors";
+
+$btnSize: 20px;
+$btnBorder: 2px solid $borderCol;
+
+@mixin transform($trans){
+  -webkit-transform: $trans;
+  -moz-transform: $trans;
+  -o-transform: $trans;
+  transform: $trans;
+}
+
+@mixin transition($time, $type){
+  -webkit-transition: $time $type;
+  -moz-transition: $time $type;
+  -o-transition: $time $type;
+  transition: $time $type;
+}
+
 .menuBtn{
   position: absolute;
-  width: 20px;
-  height: 20px;
+  width: $btnSize;
+  height: $btnSize;
   padding: 10px;
-  border: 2px solid #0E3745;
+  border: $btnBorder;
   border-radius: 50%;
   margin-top: 0.2rem;
   margin-left: 1rem;
-}
-.menuBtn .bar{
-  width: 20px;
-  height: 2px;
-  background-color: white;
-  border: 0.5px;
-  border-radius: 25px;
-  margin-top: 6px;
 
-  opacity: 1;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
+  .bar{
+    width: 20px;
+    height: 2px;
+    background-color: $barCol;
+    border: 0.5px;
+    border-radius: 25px;
+    margin-top: 6px;
 
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-}
-.menuBtn .bar:nth-child(1){
-  margin-top: 0;
+    opacity: 1;
+    @include transform(rotate(0deg));
+    @include transition(.25s, ease-in-out);
+
+    &:nth-child(1){
+      margin-top: 0;
+    }
+  }
 }
 
-.menuBtn.open .bar:nth-child(1){
-  margin-top: 0;
-  position: absolute;
-  top: 19px;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
-}
+.menuBtn.open{
+  .bar{
+    &:nth-child(1){
+      margin-top: 0;
+      position: absolute;
+      top: 19px;
+      @include transform(rotate(135deg));
+    }
 
-.menuBtn.open .bar:nth-child(2){
-  opacity: 0;
-}
+    &:nth-child(2){
+      opacity: 0;
+    }
 
-.menuBtn.open .bar:nth-child(3){
-  margin-top: 0;
-  position: absolute;
-  top: 19px;
-  -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
-  transform: rotate(-135deg);
+    &:nth-child(3){
+      margin-top: 0;
+      position: absolute;
+      top: 19px;
+      @include transform(rotate(-135deg));
+    }
+  }
 }
