--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,11 +1,15 @@
+@import "colors";
+
+$font-stack: fantasy, "Arial";
+
 body{
   width: 100%;
   height: 100%;
   min-width: 500px;
   margin: 0;
-  background-color: #2E3B40;
+  background-color: $bodyCol;
   font-size: 20px;
-  font-family:  fantasy, "Arial";
+  font-family:  $font-stack;
 }
 
 .content{
@@ -24,8 +28,8 @@ body{
 }
 
 .hoverOver{
-  background-color: #0E3745;
-  color: white;
+  background-color: $hoverCol;
+  color: $hoverTxtCol;
   cursor: pointer;
 }
 
@@ -35,12 +39,12 @@ body{
   width: 100%;
   height: 50px;
   background: #d4d4d4;
-}
 
-.footer a{
-  color: currentColor;
-}
+  a{
+    color: currentColor;
+  }
 
-.footer div{
-  padding-top: 15px;
+  div{
+    padding-top: 15px;
+  }
 }
