--- a/css/screenshots.css
+++ b/css/screenshots.css
@@ -7,27 +7,27 @@
   width: 100%;
   height: 100%;
 }
-
 #screenshots .pic {
   margin: auto;
   margin-bottom: 10px;
   width: 400px;
   background-color: gray;
-  border: 2px solid;
+  border: 2px solid black;
 }
-
 #screenshots .pic:hover {
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
   transform: scale(1.05);
 }
-
 #screenshots .pic img {
-  border: 1px solid black;
+  border: imgBorder;
   margin-left: 25px;
   margin-top: 25px;
   width: 350px;
   height: auto;
 }
-
 #screenshots .pic .desc {
   margin: auto;
   padding: 5px;
