Rename a color and border variable

--- a/css/sass/colors.scss
+++ b/css/sass/colors.scss
@@ -8,7 +8,7 @@ $bodyTxtCol: white;
 $hoverCol: #0E3745;
 $hoverTxtCol: white;
 
-$picCol: gray;
+$picCardCol: gray;
 
 $borderCol: #0E3745;
 $barCol: white;
