--- a/css/sass/colors.scss
+++ b/css/sass/colors.scss
@@ -1,20 +1,20 @@
-$bannerCol: #9ECAD9;
-$bannerTxtCol: white;
-$bannerTxtShadow: #376D7F;
+$bannerCol: #435058;//9ECAD9;
+$bannerTxtCol: #dcf763;//white;
+$bannerTxtShadow: #848c8e;//376D7F;
 
-$bodyCol: #2E3B40;
-$bodyTxtCol: white;
+$bodyCol: #f1f2ee;//2E3B40;
+$bodyTxtCol: #435058;//white;
 
-$hoverCol: #0E3745;
-$hoverTxtCol: white;
+$picCardCol: #bfb7b6;//gray;
 
-$picCardCol: gray;
-
-$borderCol: #0E3745;
+$borderCol: #435058;//0E3745;
 $barCol: white;
 
-$menuCol: #376D7F;
-$menuTblTxtCol: white;
-$menuLstBorderCol: #0E3745;
+$menuCol: #848c8e;//376D7F;
+$menuTblTxtCol: #f1f2ee;//white;
+$menuLstBorderCol: #435058;//0E3745;
 
-$linkCol: lime;
+$linkCol: #848c8e;//lime;
+
+$hoverCol: #dcf763;//0E3745;
+$hoverTxtCol: #435058;//white;
