--- a/css/screenshots.css
+++ b/css/screenshots.css
@@ -11,7 +11,7 @@
   margin: auto;
   margin-bottom: 10px;
   width: 400px;
-  background-color: gray;
+  background-color: #bfb7b6;
   border: 2px solid black;
 }
 #screenshots .pic:hover {
