--- a/css/menu.css
+++ b/css/menu.css
@@ -1,13 +1,13 @@
 .menu {
   width: 100%;
   height: 3rem;
-  background-color: #376D7F;
+  background-color: #848c8e;
   z-index: 500;
 }
 
 .menuTable {
   font-size: 2rem;
-  color: white;
+  color: #f1f2ee;
   height: 100%;
 }
 .menuTable tr td {
@@ -16,7 +16,7 @@
   padding-top: 0.3rem;
   table-layout: fixed;
   border-left-style: solid;
-  border-left-color: white;
+  border-left-color: #f1f2ee;
   border-right-width: medium;
   height: 100%;
   margin: 0;
@@ -41,16 +41,16 @@
 .menuList ul li {
   margin-top: -2px;
   list-style-type: none;
-  border-color: #0E3745;
+  border-color: #435058;
   border-width: 2px;
   border-style: solid;
   padding-left: 0.5rem;
-  background-color: #376D7F;
-  color: white;
+  background-color: #848c8e;
+  color: #f1f2ee;
 }
 .menuList ul li:hover {
-  background-color: #0E3745;
-  color: white;
+  background-color: #dcf763;
+  color: #435058;
   cursor: pointer;
 }
 .menuList ul li:nth-child(1) {
