--- a/css/sass/mainContent.scss
+++ b/css/sass/mainContent.scss
@@ -5,7 +5,7 @@
   //padding-top: 4rem;
   padding-bottom: 6rem;
   margin: auto;
-  color: white;
+  color: $bodyTxtCol;
   min-width: 500px;
   max-width: 900px;
   width: 50%;
