--- a/css/sass/menuBtn.scss
+++ b/css/sass/menuBtn.scss
@@ -66,3 +66,11 @@ $btnBorder: 2px solid $borderCol;
     }
   }
 }
+
+.menuBtn:hover{
+  background-color: $hoverCol;
+  color: $hoverTxtCol;
+  .bar{
+    background-color: $hoverTxtCol;
+  }
+}
