Change variable name

--- a/css/sass/colors.scss
+++ b/css/sass/colors.scss
@@ -11,7 +11,7 @@ $borderCol: #435058;//0E3745;
 $barCol: white;
 
 $menuCol: #848c8e;//376D7F;
-$menuTblTxtCol: #f1f2ee;//white;
+$menuTxtCol: #f1f2ee;//white;
 $menuLstBorderCol: #435058;//0E3745;
 
 $linkCol: #848c8e;//lime;
