--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -38,7 +38,7 @@ body{
   bottom: 0px;
   width: 100%;
   height: 50px;
-  background: #d4d4d4;
+  background-color: $footerCol;
 
   a{
     color: currentColor;
