--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
   bottom: 0px;
   width: 100%;
   height: 50px;
-  background: #d4d4d4;
+  background-color: #d4d4d4;
 }
 .footer a {
   color: currentColor;
