--- a/css/sass/loader.scss
+++ b/css/sass/loader.scss
@@ -1,13 +1,20 @@
 .loader{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1001;
+  background-color: #fffaf0;
+}
+
+.ballContainer{
+  position: relative;
   top: 50%;
   left: 50%;
-  margin: auto;
-  position: absolute;
+  display: inline-block;
 }
 
 .loaderBall{
   position: absolute;
-  display: inline-block;
   border: 2px solid;
   border-color: black;
   border-radius: 50%;
