--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,4 +1,5 @@
 @import "colors";
+@import "functions";
 
 $font-stack: fantasy, "Arial";
 
@@ -33,11 +34,12 @@ body{
   cursor: pointer;
 }
 
+$footerHeight: 50px;
 .footer {
   text-align: center;
   bottom: 0px;
   width: 100%;
-  height: 50px;
+  height: $footerHeight;
   background-color: $footerCol;
 
   a{
@@ -46,5 +48,27 @@ body{
 
   div{
     padding-top: 15px;
+  }
+}
+
+.toTop{
+  margin: 0;
+  position: fixed;
+  bottom: 20vh;
+  right: 0;
+  @include transform(scale(0.6));
+  opacity: 0.3;
+
+  circle{
+    fill: $bannerCol;
+  }
+
+  line{
+    stroke: $bannerTxtCol;
+    stroke-width: 3;
+  }
+
+  &:hover{
+    opacity: 1;
   }
 }
