--- a/css/sass/import.scss
+++ b/css/sass/import.scss
@@ -1,8 +1,9 @@
-@import "loader.css";
-@import "menu.css";
-@import "menuBtn.css";
-@import "style.css";
-@import "banner.css";
-@import "mainContent.css";
-@import "screenshots.css";
-@import "help.css";
+@import "loader";
+@import "menu";
+@import "menuBtn";
+@import "style";
+@import "banner";
+@import "mainContent";
+@import "screenshots";
+@import "help";
+@import "archived";
